# rabbitmq-test

./: .gitignore  CMakeLists.txt  def.h  rabbit_mq.cpp  rabbit_mq.h  receiver.cpp  receiver.py  sender.cpp  sender.py
Modules/: FindRabbitmqc.cmake
